--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <span>0</span>
             <span>&nbsp;</span>
             <br>
-            <span>S</span>
-            <span>H</span>
-            <span>A</span>
-            <span>I</span>
-            <span>V</span>
-            <span>Y</span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
            
         </h1>
        
